- home coffee changed to just js - home sass: contact_us submit button & fixed action btn style refactored - smartphone fixed action style refactored - menu_actions & mobile_menu_actions moved from partials to components - contact_us form created - float_button refactored: style attr removed (Now it is on the CSS) - nav calling from components not from partials - socials commented to prevent bug while clicking on the menu card action (LinkedIn & Instagram)

--- a/config/enums/social_networks.yml
+++ b/config/enums/social_networks.yml
@@ -4,15 +4,15 @@ social_networks:
   auth_gem: google_oauth2
   style:    red
 
-- name:     Instagram
-  username: instagram
-  auth_gem: instagram
-  style:    light-blue darken-4
+#- name:     Instagram
+#  username: instagram
+#  auth_gem: instagram
+#  style:    light-blue darken-4
 
-- name:     LinkedIn
-  username: linkedin
-  auth_gem: linkedin
-  style:    light-blue darken-2
+#- name:     LinkedIn
+#  username: linkedin
+#  auth_gem: linkedin
+#  style:    light-blue darken-2
 
 - name:     Facebook
   username: facebook
